--- a/index.html
+++ b/index.html
@@ -424,6 +424,12 @@ Projects</h1>
 
 <h1 id="video" class="video_h1"><i class="fa fa-video-camera"></i>
 Video</h1>
+
+
+
+
+
+
 <div class="the_video">
 	<h1><i class="fa fa-play"></i>
 </h1>
@@ -443,6 +449,13 @@ Video</h1>
     </main>
 </div>   
 </dialog>
+
+
+
+
+
+
+
 
 <h1 id ="people" class="people_h1"><i class="fa fa-users"></i>
 People</h1>
@@ -489,7 +502,7 @@ People</h1>
 
 
  <h1 class="social_h1"><i class="fa fa-search"></i>
-Find Me</h1>           
+Social</h1>           
 
 <div class="social">
 	<p class="soc"><a href="#"><i class="fa fa-facebook"></i></a>
