--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>NewSite</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -15,6 +16,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-localScroll/1.4.0/jquery.localScroll.min.js"></script>
 	<script src="js/scripts.js"></script>	
+
+	<link rel="stylesheet" type="text/css" media="screen" href="http://www.dhubat.com/browser-detection.css" />
+
 
 </head>
 <body>
@@ -308,7 +312,7 @@
 	<div id="home">
 		<h2>Haaruun Dhubat</h2>
 		<h4>Video Producer | Multimedia Producer</h4>
-		<p>Hello everyone, My name is Al Rayhan. I am User Interface Designer from Bangladesh. I started designing things about 5 years ago. I love to explore design and interact people with it. I design Website, Icons, Logos, Print Templates, Mobile & Desktop App.</p>
+		<p>I'm a journalist and multimedia producer based in Toronto. I am passionate about data/data visualizations, front-end development/design, rails, web scraping, and motion graphic design. I use these tools and techniques to engage people.</p>
 		<a class ="submit" href="#contact">Contact</a>
 	</div>
 	
@@ -317,35 +321,32 @@
      History</h1>
 <div class="timeline_contain">
 	<div class="time time_one">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi recusandae hic obcaecati incidunt itaque alias est, ab! Amet, esse similique dolorem vero consequuntur! Doloremque nam neque vel ut explicabo delectus.</p>
-		<button>Click me</button>
+		<p> <strike> In 2011 I began my studies at Ryerson University, where I studied Journalism, Video, and Digital Media.</strike></p>
 	</div>
 	<div class="time time_two">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi recusandae hic obcaecati incidunt itaque alias est, ab! Amet, esse similique dolorem vero consequuntur! Doloremque nam neque vel ut explicabo delectus.</p>
-		<button>Click me</button>
+		<p><strike>In 2013 I worked at Yahoo Canada as an Online Producer of the Finance Vertical.</strike></p>
 	</div>
 	<div class="line">
-		<p class ="line_p">'12</p>
+		<p class ="line_p">'11</p>
 		<p class ="line_p">'13</p>
-		<p class ="line_p">'14</p>
 		<p class ="line_p">'15</p>
+		<p class ="line_p">'...</p>
 	</div>
 	<div class="time time_three">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi recusandae hic obcaecati incidunt itaque alias est, ab! Amet, esse similique dolorem vero consequuntur! Doloremque nam neque vel ut explicabo delectus.</p>
-		<button>Click me</button>
+		<p><strike>In 2014 I worked began a short stint at the Financial Post, and began my journey as a Web Developer. In 2015 I completed my studies at Ryerson and recieved my bachelor's degree, and also learned Ruby on Rails.</strike></p>
 	</div>
 	<div class="time time_four">
-		<h3>More...</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi recusandae hic obcaecati incidunt itaque alias est, ab! Amet, esse similique dolorem vero consequuntur! Doloremque nam neque vel ut explicabo delectus.</p>
+		<p>In the years to come I hope to expand all of my digital and technical skills, as I pursue more challanging opportunities in a diversity of fields, prime among those fields, is film(doc), and web apps, and information.</p>
 	</div>
 
 </div>
 
-<h1 id="skills" class="skills_h1"><i class="fa fa-fort-awesome"></i>
+<h1 id="skills" class="skills_h1">
+<i class="fa fa-modx"></i>
 Skills</h1>
 <div class="skills">
 	<div class="professional">
-		<h2><i class="fa fa-briefcase"></i>Professional</h2>
+		<h3><i class="fa fa-briefcase"></i>Professional</h3>
 		<div class="skill">
 			<h4>Writing</h4>
 			<div class="track track_one"></div>
@@ -364,7 +365,7 @@ Skills</h1>
 		</div>
 	</div>
 	<div class="technical">
-	<h2><i class="fa fa-codepen"></i>Technical</h2>
+	<h3><i class="fa fa-codepen"></i>Technical</h3>
 	<div class="skill">
 			<h4>Video</h4>
 			<div class="track track_two"></div>
@@ -407,18 +408,18 @@ Projects</h1>
 <div class="interests">
 	<div class="area interest_one">
 		<h2>Video</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis saepe, omnis blanditiis accusantium ratione! Quas nisi, placeat, consequatur quod aliquam perferendis natus dolore, amet, nesciunt quasi in non minima esse. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio beatae unde similique provident ipsa consequatur ad saepe maxime repellendus tenetur, voluptas magni excepturi accusantium culpa numquam perferendis voluptatum accusamus.</p>
+		<p>I use software such as After effects, Premiere Pro, Davinci Resolve, Adobe Audition, Photoshop, Illustrator and other technologies, to make rich and engaging video's and motion graphics.</p>
 	</div>
 	<div class="area interest_two">
 		<h2>Web Development</h2>
 		<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem numquam temporibus recusandae sint eius, blanditiis obcaecati odio est! Impedit quia explicabo voluptatum aspernatur, nobis, a corporis non labore placeat beatae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia deserunt velit dolores sit aliquam, quidem maxime pariatur at, enim et, nobis quasi cupiditate quos in cumque! Voluptas fuga fugiat doloribus.
+		I use technologies such as HTML5, CSS3, Javascript, and Ruby on Rails to develop rich and enaging websites and apps.
 		</p>
 	</div>
 	<div class="area interest_three">
 		<h2>Multimedia</h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptatibus earum rem, suscipit beatae ducimus dignissimos odit, qui quo dolorum, consequuntur unde. Nemo, rem eaque, odio natus ipsa nobis quasi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic accusamus magni, quisquam error, optio sint pariatur rem quo repellendus quaerat natus cupiditate consequatur illum tempore alias suscipit. Cupiditate ad, dicta?
+			Multimedia is more than just web and video, but photography, social media, digital media, and I use the platform of Multimedia and information to tell stories and communicate complex information.
 		</p>
 	</div>
 
@@ -517,5 +518,24 @@ Social</h1>
 
 </div> <!-- wrapper -->
 	
+
+
+<script type="text/javascript"> 
+function get_browser_version(){
+  var N=navigator.appName, ua=navigator.userAgent, tem;
+  var M=ua.match(/(opera|chrome|safari|firefox|msie)\/?\s*(\.?\d+(\.\d+)*)/i);
+  if(M && (tem= ua.match(/version\/([\.\d]+)/i))!= null) M[2]= tem[1];
+  M=M? [M[1], M[2]]: [N, navigator.appVersion, '-?'];
+  return M[1];
+}
+
+var browser = navigator.appName;
+var version = get_browser_version();
+
+if (browser=="Microsoft Internet Explorer") { 
+    if (version<="8.1") 
+        document.location.href="browser.html" 
+} 
+</script>	
 </body>
 </html>
