--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ People</h1>
 
 
 <h1 id ="contact" class ="contact_h1"><i class="fa fa-envelope"></i> Contact</h1>
-            <form action="http://formspree.io/dhubat.haaruun@gmail.com">
+            <form action="http://formspree.io/dhubat.haaruun@gmail.com" method="POST">
  <p class ="in"><input type="text" name="Name" id="Name" placeholder="Name" /></p>
                     
                 <p class ="in"><input type="text" name="_replyto" id="Email" placeholder="Email"/></p>
