--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<p><a class="nav_one" href="#home">Home</a></p>
 		<p><a class="nav_two" href="#history">History</a></p>
 		<p><a class="nav_three"  href="#skills">Skills</a></p>
-		<p><a class="nav_five"   href="#interests">Interests</a></p>
+		<p><a class="nav_five"   href="#interests">Focus</a></p>
 		<p><a class="nav_six"   href="#video">Video</a></p>
 		<p><a class="nav_seven"  href="#people">People</a></p>
 		<p><a class="nav_eight" href="#contact">Contact</a></p>
@@ -49,7 +49,7 @@
 	<p><a class="nav_one" href="#home">Home</a></p>
 		<p><a class="nav_two" href="#history">History</a></p>
 		<p><a class="nav_three"  href="#skills">Skills</a></p>
-		<p><a class="nav_five"   href="#interests">Interests</a></p>
+		<p><a class="nav_five"   href="#interests">Focus</a></p>
 		<p><a class="nav_six"   href="#video">Video</a></p>
 		<p><a class="nav_seven"  href="#people">People</a></p>
 		<p><a class="nav_eight" href="#contact">Contact</a></p>
