--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
 <div class="timeline_content_block left">
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>2012</span></h5></div>
-	<p class="timeline_text left"> <strike> In 2011 I began my studies at Ryerson University, where I studied Journalism, Video, and Digital Media. </strike></p>
+	<p class="timeline_text left"> <strike>In 2011, I began my studies at Ryerson University, where I studied Journalism, Video, and Digital Media. </strike></p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
 	<div class="timeline_date right"><h5><span>2013</span></h5></div>
-	<p class="timeline_text right"><strike>In 2013 I worked at Yahoo Canada as an Online Producer of the Finance Vertical. I also worked for Rogers publishing as an online editor. </strike></p>
+	<p class="timeline_text right"><strike>In 2013, I worked at Yahoo Canada as an Online Producer of the Finance Vertical. I also worked for Rogers publishing as an online editor. </strike></p>
 </div>
 
 <div class="timeline_content_block left">
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>2014</span></h5></div>
-	<p class="timeline_text left"><strike>In 2014 I worked began a short stint at the Financial Post, and began my journey as a Web Developer. In 2015 I completed my studies at Ryerson and recieved my bachelor's degree, and also learned Ruby on Rails.</strike></p>
+	<p class="timeline_text left"><strike>In 2014, I worked began a short stint at the Financial Post, and began my journey as a Web Developer. In 2015, I completed my studies at Ryerson and received my bachelor's degree, and also learned Ruby on Rails.</strike></p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
 	<div class="timeline_date right"><h5><span>2016</span></h5></div>
-		<p class="timeline_text right">In the years to come I hope to expand all of my digital and technical skills, as I pursue more challanging opportunities in a diversity of fields, prime among those fields, is film(doc), and web apps, and information.</p>
+		<p class="timeline_text right">In the years to come I hope to expand all of my digital and technical skills, as I pursue more challanging opportunities in a diversity of fields, prime among those fields, is film (documentary), and web apps, and information.</p>
 </div>
 
 
@@ -167,7 +167,7 @@ Projects</h1>
 	<div class="area interest_two">
 		<h2>Web Development</h2>
 		<p>
-		I use technologies such as HTML5, CSS3, Javascript, and Ruby on Rails to develop rich and enaging websites and apps.
+		I use technologies such as HTML5, CSS3, Javascript, and Ruby on Rails to develop rich and engaging websites and apps.
 		</p>
 	</div>
 	<div class="area interest_three">
@@ -210,20 +210,19 @@ People</h1>
 <div class="people">
 	<div class="person person_one">
 		
-		<p>Haaruun is the hardest working employee who has ever worked under me. And
-			though he is creative and capable, his most important quality is his work ethic. I think he would be an important addition to any team.</p>
+		<p>Haaruun is the hardest working employee who has ever worked for me. And though he is creative and capable, his most important quality is his work ethic. I think he would be an important addition to any team.</p>
 	</div>
 	<div class="person person_two">
 		
 		<p>
-		I really enjoyed teaching Haaruun at Ryerson University. He is inspired, diligent, and hard working. It was a pleasent teaching experience.
+		I really enjoyed teaching Haaruun at Ryerson University. He is inspired, diligent, and hard working. It was a pleasant teaching experience.
 		</p>
 	</div>
 	<div class="person person_three">
 		
 		<p>
 			Haaruun is extremely creative, and he brings a unique perspective to the projects
-			he works on. During his tenure with me, I enjoyed Haaruun's temperment and the value he brought to the team. In my experience, you can't go wrong with someone of Haaruun skillset.
+			he works on. During his tenure with me, I enjoyed Haaruun and the value he brought to the team. In my experience, you can't go wrong with someone with Haaruun's skillset.
 		</p>
 	</div>
 </div>
