--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<div id="home">
 		<h2>Haaruun Dhubat</h2>
-		<h4>Video Producer | Multimedia Producer</h4>
+		<h4>Developer | Multimedia Designer</h4>
 		<p>I'm a journalist and multimedia producer based in Toronto. I am passionate about data/data visualizations, front-end development/design, rails, web scraping, and motion graphic design. I use these tools and techniques to engage people.</p>
 		<a class ="submit" href="Resume.pdf" download><span>Resume</span></a>
 	</div>
