--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Social</h1>
 </p>
 	<p class="soc"><a href="https://github.com/haaruun"><i class="fa fa-github"></i></a>
 </p>
-	<p class="soc"><a href="https://www.instagram.com/ace_boon_haaruun/"><i class="fa fa-instagram"></i></a>
+	<p class="soc"><a href="https://www.instagram.com/haaruun6/"><i class="fa fa-instagram"></i></a>
 </p>
 </div>
 
