--- a/forward.html
+++ b/forward.html
@@ -373,7 +373,7 @@ nav{
 	<section class="header">
 
 		<nav>
-			<h1 class="nav_item_logo"><img width="180" src="Extras/FORWARD.png" alt=""></h1>
+			<h1 class="nav_item_logo"><img width="180" src="images/FORWARD.png" alt=""></h1>
 			<!-- <p class="nav_item">Services</p>
 			<p class="nav_item">Team</p>
 			<p class="nav_item">Customers</p> -->
