--- a/forward.html
+++ b/forward.html
@@ -60,7 +60,6 @@ h1 a {
 }
 
 .price-table-wrapper {
-  font-family: 'Lato', sans-serif;
   text-align: center;
   margin-top: 15px !important;
    margin-bottom: 25px !important;
@@ -180,9 +179,9 @@ h1 a {
 	
 <div class="price-table-wrapper">
   <div class="pricing-table">
-    <h2 class="pricing-table__header">BASIC</h2>
-    <h3 class="pricing-table__price">$19|M</h3>
-    <a target="_blank" class="pricing-table__button" href="http://www.digimadmedia.com">
+    <h2 class="pricing-table__header">MONTH</h2>
+    <h3 class="pricing-table__price">$199</h3>
+    <a class="pricing-table__button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5HFXXMCFYU5WQ">
       Buy Now!
     </a>
     <ul class="pricing-table__list">
@@ -192,23 +191,10 @@ h1 a {
       <li>Quality News Aggregation</li>
     </ul>
   </div>
-  <div style="display: none;" class="pricing-table featured-table">
-    <h2 class="pricing-table__header">BUSINESS</h2>
-    <h3 class="pricing-table__price">$29|M</h3>
-    <a target="_blank" class="pricing-table__button" href="http://www.digimadmedia.com">
-      Buy Now!
-    </a>
-    <ul class="pricing-table__list">
-      <li>40 day free trial</li>
-      <li>100gb storage space</li>
-      <li>25% discount</li>
-      <li>24 hour support</li>
-    </ul>
-  </div>
   <div class="pricing-table">
-    <h2 class="pricing-table__header">PREMIUM</h2>
-    <h3 class="pricing-table__price">$29|M</h3>
-    <a target="_blank" class="pricing-table__button" href="http://www.digimadmedia.com">
+    <h2 class="pricing-table__header">*PREMIUM*</h2>
+    <h3 class="pricing-table__price">$299</h3>
+    <a class="pricing-table__button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F4VQDYMC5TQTG">
       Buy Now!
     </a>
     <ul class="pricing-table__list">
@@ -220,6 +206,9 @@ h1 a {
   </div>
 </div>
 </main>
+
+
+
 
 
 </body>
