--- a/forward.html
+++ b/forward.html
@@ -173,7 +173,11 @@ h1 a {
 		<h2>Let's Do What It Takes.</h2>			
 	</section>
 
-	<p>Forward is a Somalia owned, operated and produced newsletter. Our mission is to inform a growing dispora on international events effecting the horn. Please support us by purchasing one of our affordable plans below:</p>
+	<p>Forward is a small Somali-owned, operated and produced newsletter. Our mission is to inform a growing diaspora on international events affecting the horn. 
+	<br />	<br />
+	All users require a primary email because email is the mode of communication the Newsletter will be distributed.
+	<br />	<br />
+   Please support us by purchasing one of our affordable plans below:</p>
 
 <main>
 	
@@ -198,7 +202,7 @@ h1 a {
       Buy Now!
     </a>
     <ul class="pricing-table__list">
-    <li>Recieve Bi-weekly updates</li>
+    <li>Recieve monthly updates</li>
       <li>Quality Journalism</li>
       <li>Objective News</li>
       <li>Quality News Aggregation</li>
