--- a/forward.html
+++ b/forward.html
@@ -36,7 +36,7 @@ p{
 	color: black;
 	margin: 0 auto !important;
 	padding: 40px;
-	width: 55%;
+	width: 67.5%;
 }
 
 
@@ -177,7 +177,9 @@ h1 a {
 	<br />	<br />
 	All users require a primary email because email is the mode of communication the Newsletter will be distributed.
 	<br />	<br />
-   Please support us by purchasing one of our affordable plans below:</p>
+	Forward Newsletter is published at the end of every Month. The first installment will be circulated at the end of April.
+<br />	<br />
+      Please support us by purchasing one of our affordable plans below:</p>
 
 <main>
 	
