--- a/forward.html
+++ b/forward.html
@@ -177,7 +177,7 @@ h1 a {
 	<br />	<br />
 	All users require a primary email because email is the mode of communication the Newsletter will be distributed.
 	<br />	<br />
-	Forward Newsletter is published at the end of every Month. The first installment will be circulated at the end of April.
+	Forward Newsletter is published on the 25<sup>th</sup> of every month. The first installment will be circulated April 25<sup>th</sup>.
 <br />	<br />
       Please support us by purchasing one of our affordable plans below:</p>
 
