--- a/forward.html
+++ b/forward.html
@@ -178,7 +178,9 @@ h1 a {
 	All users require a primary email because email is the mode of communication the Newsletter will be distributed.
 	<br />	<br />
 	Forward Newsletter is published on the 25<sup>th</sup> of every month. The first installment will be circulated April 25<sup>th</sup>.
-<br />	<br />
+	<br /> <br />
+       For more information, please email us: <a href="mailto:info@forwardstar.org?subject=RE:Forward Newsletter Question">info@forwardstar.org</a>  
+	<br />	<br />
       Please support us by purchasing one of our affordable plans below:</p>
 
 <main>
