--- a/forward.html
+++ b/forward.html
@@ -179,7 +179,7 @@ h1 a {
 	<br />	<br />
 	Forward Newsletter is published on the 25<sup>th</sup> of every month. The first installment will be circulated April 25<sup>th</sup>.
 	<br /> <br />
-       For more information, please email us: <a href="mailto:info@forwardstar.org?subject=RE:Forward Newsletter Question">info@forwardstar.org</a>  
+       For more information, please email us: <a style="color: black; text-decoration: none;" href="mailto:info@forwardstar.org?subject=RE:Forward Newsletter Question">info@forwardstar.org</a>  
 	<br />	<br />
       Please support us by purchasing one of our affordable plans below:</p>
 
