--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<p><a class="nav_five"   href="#interests">Focus</a></p>
 		<p><a class="nav_six"   href="#video">Video</a></p>
 		<p><a class="nav_seven"  href="#people">People</a></p>
-		<p><a class="nav_eight" href="#contact">Contact</a></p>
+		<p><a class="nav_eight" href="/forward">Forward</a></p>
 	</div>
 </header>
 
