--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
 
 <div class="timeline_content_block left">
 	<div class="ball"></div>
-	<div class="timeline_date left"><h5><span>2012</span></h5></div>
+	<div class="timeline_date left"><h5><span>Roger Communications</span></h5></div>
 	<p class="timeline_text left"> <strike>In 2011, I began my studies at Ryerson University, where I studied Journalism, Video, and Digital Media. </strike></p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
-	<div class="timeline_date right"><h5><span>2013</span></h5></div>
+	<div class="timeline_date right"><h5><span>Yahoo Canada</span></h5></div>
 	<p class="timeline_text right"><strike>In 2013, I worked at Yahoo Canada as an Online Producer of the Finance Vertical. I also worked for Rogers publishing as an online editor. </strike></p>
 </div>
 
 <div class="timeline_content_block left">
 	<div class="ball"></div>
-	<div class="timeline_date left"><h5><span>2014</span></h5></div>
+	<div class="timeline_date left"><h5><span>Ryerson University</span></h5></div>
 	<p class="timeline_text left"><strike>In 2014, I worked began a short stint at the Financial Post, and began my journey as a Web Developer. In 2015, I completed my studies at Ryerson and received my bachelor's degree, and also learned Ruby on Rails.</strike></p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
-	<div class="timeline_date right"><h5><span>2016</span></h5></div>
+	<div class="timeline_date right"><h5><span>Herjavec Group</span></h5></div>
 		<p class="timeline_text right">In the years to come I hope to expand all of my digital and technical skills, as I pursue more challanging opportunities in a diversity of fields, prime among those fields, is film (documentary), and web apps, and information.</p>
 </div>
 
