--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
 	</div>
 	<div class="head_three">
 	<p><a class="nav_one" href="#home">Home</a></p>
-		<p><a class="nav_two" href="#history">History</a></p>
+		<p><a class="nav_two" href="#history">Work</a></p>
 		<p><a class="nav_three"  href="#skills">Skills</a></p>
 		<p><a class="nav_five"   href="#interests">Focus</a></p>
 		<p><a class="nav_six"   href="#video">Video</a></p>
 		<p><a class="nav_seven"  href="#people">People</a></p>
-		<p><a class="nav_eight" href="/forward">Forward</a></p>
 	</div>
 </header>
 
