--- a/index.html
+++ b/index.html
@@ -72,25 +72,34 @@
 <div class="timeline_content_block left">
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>Roger Communications</span></h5></div>
-	<p class="timeline_text left"> <strike>In 2011, I began my studies at Ryerson University, where I studied Journalism, Video, and Digital Media. </strike></p>
+	<p class="timeline_text left">Developed fully functional responsive prototypes based on
+business requirements using HTML5, CSS3, JavaScript and
+JQuery.</p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
 	<div class="timeline_date right"><h5><span>Yahoo Canada</span></h5></div>
-	<p class="timeline_text right"><strike>In 2013, I worked at Yahoo Canada as an Online Producer of the Finance Vertical. I also worked for Rogers publishing as an online editor. </strike></p>
+	<p class="timeline_text right">Sparked the success of e-mail, social media, and web marketing
+campaigns by producing, managing, analyzing, and refining
+campaigns across all digital media.</p>
 </div>
 
 <div class="timeline_content_block left">
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>Ryerson University</span></h5></div>
-	<p class="timeline_text left"><strike>In 2014, I worked began a short stint at the Financial Post, and began my journey as a Web Developer. In 2015, I completed my studies at Ryerson and received my bachelor's degree, and also learned Ruby on Rails.</strike></p>
+	<p class="timeline_text left">Participated in development of large-scale multimedia
+presentations, including graphic design, video editing, and
+programming.</p>
 </div>
 
 <div class="timeline_content_block right">
 	<div class="ball"></div>
 	<div class="timeline_date right"><h5><span>Herjavec Group</span></h5></div>
-		<p class="timeline_text right">In the years to come I hope to expand all of my digital and technical skills, as I pursue more challanging opportunities in a diversity of fields, prime among those fields, is film (documentary), and web apps, and information.</p>
+		<p class="timeline_text right">Coordinate the marketing team on creative campaigns and
+programmatic buying to support digital cross-promotion efforts,
+including email campaigns, Facebook promotions, outreach and
+marketing initiatives for an improved end-user experience.</p>
 </div>
 
 
