--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<div id="home">
 		<h2>Haaruun Dhubat</h2>
-		<h4>Developer | Multimedia Designer</h4>
+		<h4>Web Development | UX/UI Design | Digital Communications</h4>
 		<p>My name is Haaruun Dhubat, i'm a developer and multimedia producer based in Toronto. I am passionate about data/data visualizations, front-end development/design, rails, web scraping, and motion graphic design. I use these tools and techniques to engage people.</p>
 	</div>
 	
