--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>Roger Communications</span></h5></div>
 	<p class="timeline_text left">Developed fully functional responsive prototypes based on
-business requirements using HTML5, CSS3, JavaScript and
+business requirements using HTML5, CSS3, JavaScript, and
 JQuery.</p>
 </div>
 
@@ -170,7 +170,7 @@ Projects</h1>
 <div class="interests">
 	<div class="area interest_one">
 		<h2>Video</h2>
-		<p>I use software such as After effects, Premiere Pro, Davinci Resolve, Adobe Audition, Photoshop, Illustrator and other technologies, to make rich and engaging video's and motion graphics.</p>
+		<p>I use software such as After Effects, Premiere Pro, Davinci Resolve, Adobe Audition, Photoshop, Illustrator and other technologies, to make rich and engaging videos and motion graphics.</p>
 	</div>
 	<div class="area interest_two">
 		<h2>Web Development</h2>
