--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div id="home">
 		<h2>Haaruun Dhubat</h2>
 		<h4>Web Development | UI & UX Design | Digital Communications</h4>
-		<p>My name is Haaruun Dhubat, I'm a developer and multimedia producer based in Toronto. I am passionate about data/data visualizations, front-end development/design, rails, web scraping, and motion graphic design. I use these tools and techniques to engage people.</p>
+		<p>I’m a front-end developer, designer, and digital communications specialist based in Toronto. I use code, video and other tools to tell stories and present information. I love teamwork and building. My skills are as broad as my interests.</p>
 	</div>
 	
  
