--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div id="home">
 		<h2>Haaruun Dhubat</h2>
 		<h4>Web Development | UI & UX Design | Digital Communications</h4>
-		<p>I’m an experienced multimedia developer, designer, and digital communications specialist based in Toronto. I use code, video and other tools to tell stories and present information. I enjoy teamwork and innovation. My skills are as broad as my interests.</p>
+		<p>I’m a experienced multimedia developer, designer, and digital communications specialist based in Toronto. I use code, video and other tools to tell stories and present information. I enjoy teamwork and innovation. My skills are as broad as my interests.</p>
 	</div>
 	
  
