--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@ campaigns across all digital media.</p>
 <div class="timeline_content_block left">
 	<div class="ball"></div>
 	<div class="timeline_date left"><h5><span>Ryerson University</span></h5></div>
-	<p class="timeline_text left">Participated in development of large-scale multimedia
-presentations, including graphic design, video editing, and
-programming.</p>
+	<p class="timeline_text left">Participated in developing large-scale multimedia presentations and single-page web apps using technologies like AngularJS</p>
 </div>
 
 <div class="timeline_content_block right">
