adding recent work

--- a/index.html
+++ b/index.html
@@ -44,10 +44,34 @@
 			</div>
 			
 		</div>
+		<div class="work">
+			<div class="code">
+				<div class="icon-contain-code">
+					<img src="./images/xd.png" alt="">
+				</div>
+				<div class="desc">
+					<a class="work-title" href="https://xd.adobe.com/view/d676b866-842f-4265-bb36-3c07e3e0fec9/?fullscreen" target="_blank">Recent Design Work</a>
+					<div class="text">Finance and insurance application prototype (medium fidelity), for Sym-Tech and VW Canada.</div>
+				</div>
+			
+			</div>
+			<div class="design">
+				<div class="icon-contain-design">
+					<img src="./images/bitbucket.png" alt="">
+				</div>
+				<div class="desc">
+					<a class="work-title" href="https://bitbucket.org/haaruun/dave-ui-react/src/master/" target="_blank">Recent UI Dev Work</a>
+					<div class="text">I built a react-based resusable component library meant for greater preformance accross a suite of apps.</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="right">
+
+
+
+	<!-- <div class="right">
 		<h1 class="coming">Come Back Soon!</h1>
-	</div>
+	</div> -->
 </div>
 	
 	
