--- a/index.html
+++ b/index.html
@@ -4,76 +4,320 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" CONTENT="Haaruun Dhubat">
-	<title>I'm Haaruun</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.2.0/tailwind.min.css">
+	<title>Haaruun ┊ Portfolio</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/3.1.1/jquery.shuffle.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/3.1.1/jquery.shuffle.modernizr.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-localScroll/1.4.0/jquery.localScroll.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.4.0/jquery-migrate.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script> -->
 
 
 	<link rel="stylesheet" type="text/css" media="screen" href="http://www.dhubat.com/browser-detection.css" />
-	<link rel="icon" href="images/favicon_.png" type="image/x-icon" />
+	<link rel="icon" href="assets/images/favicon.png" type="image/x-icon" />
 
 
 
 </head>
 <body>
 
-<div class="wrapper">
-	<div class="left">
 
-		<div class="element">
-			<div class="img-wrap">
-				<p class="img"></p>
-			</div>
-			<h2 class="name">Haaruun Dhubat</h2>
-			<h3 class="title">UX Designer & Engineer</h3>
-			<div class="text">Hi, my name is Haaruun. I'm a UX Designer and Engineer based in Toronto. I'm currently updating my website, but if you like to know more or see some of my recent work, send me an email. </div>
-			
-			<div class="btn-wrap">
-				<a href="mailto:dhubat.haaruun@gmail.com?subject=Web Inquiry">Submit Inquiry</a>
-			</div>
-			
-		</div>
-		<div class="work">
-			<div class="code">
-				<div class="icon-contain-code">
-					<img src="./images/xd.png" alt="">
-				</div>
-				<div class="desc">
-					<a class="work-title" href="https://xd.adobe.com/view/d676b866-842f-4265-bb36-3c07e3e0fec9/?fullscreen" target="_blank">Recent Design Work</a>
-					<div class="text">Finance and insurance application prototype (medium fidelity), for Sym-Tech and VW Canada.</div>
-				</div>
-			
-			</div>
-			<div class="design">
-				<div class="icon-contain-design">
-					<img src="./images/bitbucket.png" alt="">
-				</div>
-				<div class="desc">
-					<a class="work-title" href="https://bitbucket.org/haaruun/dave-ui-react/src/master/" target="_blank">Recent UI Dev Work</a>
-					<div class="text">I built a react-based resusable component library meant for greater preformance accross a suite of apps.</div>
-				</div>
-			</div>
+
+
+
+
+<div class="container">
+	<div class="left-bar">
+		<div class="left-text">
+			<div class="left-containter-top">
+				<div class="left-containter-top-center">
+			<div class="head-shot"></div>
+			<h1>Haaruun M. 
+				<br class="name-break" /> Dhubat</h1>
+			<span class="res-co-wrapper">
+			<a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>
+			<a href="assets/images/Resume.pdf" target="_blank" class="btn-outline">Resume</a>
+		</span>
+			<p class="icon-wrap">
+				<a href="https://github.com/Haaruun" class="social-link">
+					<i class="fab fa-github"></i>
+				</a>
+				<a href="https://twitter.com/haaruund" class="social-link">
+				<i class="fab fa-twitter"></i>
+				</a>
+			</p>
+
 		</div>
 	</div>
 
+			<div class="main-tag">
+				<span class="role">Prototyping</span> 
+				<span class="role">Information Architecture</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Data Visualizaion</span>
+				<span class="role">HTML/CSS</span> 
+				<span class="role">Adobe CC</span>
+				<span class="role">JavaScript</span>
+
+				<span class="role">Design Systems</span> 
+				<span class="role">React</span>
+				<span class="role">Angular</span>
+				<span class="role">Motion Design</span>
+				<span class="role">Graphic Design</span> 
+				<span class="role">Video Editing/Filming</span>
+				<span class="role">UX Research</span>
+				<span class="role">Agile</span>
+				<span class="role">Marketing</span>
+				<span class="role">Mobile Design</span>
+
+				<span class="role">Web Design</span> 
+				<span class="role">Multimedia</span>
+				<span class="role">Usability Testing</span>
+				<span class="role">Communication</span>
+				<span class="role">Sharepoint</span>
 
 
-	<!-- <div class="right">
-		<h1 class="coming">Come Back Soon!</h1>
-	</div> -->
-</div>
+				<span class="role">Design Thinking</span>
+				<span class="role">Lean UX</span> 
+				<span class="role">Scrum</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Invision</span>
+				<span class="role">Figma</span>
+				<span class="role">Sketch</span>
+
+
+			</div>
+			
+
+
+
+		</div>
 	
+		
+
+	</div>
+	<div class="main">
+		<div class="main-text">
+			<div class="main-text-center">
+			<h1>Experience Designer & UI Engineer</h1>
+			<br>
+			<p class="project-desc">
+				I’m an experienced and passionate UX/UI/Product Designer with over 8+ years of experience researching, ideating, 
+				and building digital products. Over the years I’ve had the opportunity to work on several great products reflecting 
+				a variety of domains. From enterprise insurance applications to internally facing cybersecurity apps, I’ve worked on a 
+				variety of dynamic products in agile or lean teams and environments. I leverage my engineering skills and understanding 
+				of JavaScript and popular libraries and frameworks like React, to build live/interactive prototypes and collaborate 
+				with development/engineering teams to design functionality and problem solve issues.
+
+				<br>
+				<br>
+				I believe soft skills are important, as such I strive to be an effective problem solver and clear communicator. 
+				I’m a team player with a positive attitude and focus.
+	
+			</p>
+		</div>
+	</div>
+
+		<div class="main-wrapper">
+
+			<div class="content">
+
+
+
+
+
+
+
+
+
+
+		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/insurance-app.html">
+		
+			<div class="project-preview first-preview">
+
+			<img src="assets/images/DAVE 2.0/DAVE_Prev.jpg" alt="">
+		</div>
+		</a>
+
+		<h2 class="project-title">Enterprise Insurance Application — Sym-Tech</h2>
+
+			<div class="tag-container">
+				<span class="role">Experience Design</span> 
+				<span class="role">UI Development</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Adobe CC</span>
+				<span class="role">Accessibility</span>
+				<span class="role">React</span>
+				<span class="role">HTML/CSS</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UI Design</span>
+				<span class="role">Prototyping</span>
+				
+				
+			</div>
+
+
+
+
+
+
+
+
+
+			<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/elearn-app.html">
+		
+				<div class="project-preview first-preview">
+	
+				<img src="assets/images/e-Learning App/ICTCelearn_Prev.jpg" alt="">
+			</div>
+			</a>
+	
+			<h2 class="project-title">EdTech Application — ICTC-CTIC</h2>
+	
+				<div class="tag-container">
+				<span class="role">Experience Design</span> 
+				<span class="role">UI Development</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Adobe CC</span>
+				<span class="role">Accessibility</span>
+				<span class="role">React</span>
+				<span class="role">HTML/CSS</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UI Design</span>
+				<span class="role">Lean UX</span>
+				<span class="role">Data Visualizaion</span>
+
+				</div>
+	
+
+
+
+
+
+				<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/jobsite-app.html">
+		
+					<div class="project-preview first-preview">
+		
+					<img src="assets/images/Job App/ICTCJobsite_Prev.jpg" alt="">
+				</div>
+				</a>
+		
+				<h2 class="project-title">Employment and Human Resources Application — ICTC-CTIC</h2>
+		
+					<div class="tag-container">
+				<span class="role">Experience Design</span> 
+				<span class="role">UI Development</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Adobe CC</span>
+				<span class="role">Accessibility</span>
+				<span class="role">React</span>
+				<span class="role">HTML/CSS</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UI Design</span>
+				<span class="role">Lean UX</span>
+				<span class="role">Data Visualizaion</span>
+					</div>
+
+
+
+
+
+
+
+
+		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/network-app.html">
+		
+		<div class="project-preview second-preview">
+			<img src="assets/images/BellNet_Prev.jpg" alt="">
+		</div>
+
+		</a>
+		<h2 class="project-title">Internal Managment Tool — Bell</h2>
+			<div class="tag-container">
+				<span class="role">Web Design</span> 
+				<span class="role">UI Development</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Adobe CC</span>
+				<span class="role">Accessibility</span>
+				<span class="role">JavaScript</span>
+				<span class="role">HTML/CSS</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UI Design</span>
+				<span class="role">Prototyping</span>
+			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/remit-app.html">
+		
+		<div class="project-preview third-preview">
+			<img src="assets/images/JubaMobile_Prev.jpg" alt="">
+		</div>
+
+		</a>
+		<h2 class="project-title">Mobile Remmittance Application — Juba Express</h2>
+			<div class="tag-container">
+				<span class="role">Design Thinking</span>
+				<span class="role">Adobe CC</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UI Design</span>
+				<span class="role">Prototyping</span>
+				<span class="role">Mobile Design</span>
+			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+		<h4 class="text-bottom">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+			scrambled it to make a type specimen book. It has survived not only five centuries, </h4> -->
+
+
+
+
+
+
+
+		</div>
+
+
+	</div>
+
+		
+	</div>
+</div>
 	
 		
 		
