--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
 
-		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/insurance-app.html">
+		<a href="/insurance-app.html">
 		
 			<div class="project-preview first-preview">
 
@@ -164,7 +164,7 @@
 
 
 
-			<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/elearn-app.html">
+			<a href="/elearn-app.html">
 		
 				<div class="project-preview first-preview">
 	
@@ -196,7 +196,7 @@
 
 
 
-				<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/jobsite-app.html">
+				<a href="/jobsite-app.html">
 		
 					<div class="project-preview first-preview">
 		
@@ -229,7 +229,7 @@
 
 
 
-		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/network-app.html">
+		<a href="/network-app.html">
 		
 		<div class="project-preview second-preview">
 			<img src="assets/images/BellNet_Prev.jpg" alt="">
@@ -264,7 +264,7 @@
 
 
 
-		<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/remit-app.html">
+		<a href="/remit-app.html">
 		
 		<div class="project-preview third-preview">
 			<img src="assets/images/JubaMobile_Prev.jpg" alt="">
