--- a/elearn-app.html
+++ b/elearn-app.html
@@ -25,7 +25,7 @@
 		<div class="left-text">
             <div class="left-containter-top">
 				<div class="left-containter-top-center">
-            <a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="home-link">⇠ Home</a>
+            <a href="/" class="home-link">⇠ Home</a>
 		
 			<div class="head-shot"></div>
 			<h1>Haaruun M. 
@@ -243,9 +243,8 @@
                     
                     <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:b785ed02-3281-496b-bd90-499fd996fb15" target="_blank" class="view-btn">View Project</a>
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/insurance-app.html" class="next-prev-link"> ⇠ Previous Project </a>|
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="next-prev-link">Home </a> |
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/jobsite-app.html" class="next-prev-link"> Next Project ⇢</a> 
+						<a href="/insurance-app.html" class="next-prev-link"> ⇠ Previous Project </a>┊
+						<a href="/jobsite-app.html" class="next-prev-link"> Next Project ⇢</a> 
                     </div>
 
                    
