--- a/insurance-app.html
+++ b/insurance-app.html
@@ -28,7 +28,7 @@
 		<div class="left-text">
 			<div class="left-containter-top">
 				<div class="left-containter-top-center">
-			<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="home-link">⇠ Home</a>
+			<a href="/" class="home-link">⇠ Home</a>
 		
 			<div class="head-shot"></div>
 			<h1>Haaruun M. 
@@ -311,9 +311,8 @@
                       
                     <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:717cc642-3d89-4a79-8741-49910881dae7" target="_blank" class="view-btn">View Project</a>
-                        <a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/remit-app.html" class="next-prev-link"> ⇠ Previous Project</a>┊
-						<!-- <a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="next-prev-link">Home </a> | -->
-                        <a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/elearn-app.html" class="next-prev-link">Next Project ⇢ </a>
+                        <a href="/remit-app.html" class="next-prev-link"> ⇠ Previous Project</a>┊
+                        <a href="/elearn-app.html" class="next-prev-link">Next Project ⇢ </a>
                     </div>
 
                    
