--- a/jobsite-app.html
+++ b/jobsite-app.html
@@ -26,7 +26,7 @@
 		<div class="left-text">
             <div class="left-containter-top">
 				<div class="left-containter-top-center">
-            <a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="home-link">⇠ Home</a>
+            <a href="/" class="home-link">⇠ Home</a>
 			
 			<div class="head-shot"></div>
 			<h1>Haaruun M. 
@@ -247,9 +247,8 @@
                     
                     <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:2db4060f-207d-4666-b52f-25d37c063980" target="_blank" class="view-btn">View Project</a>
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/elearn-app.html" class="next-prev-link"> ⇠ Previous Project </a>|
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="next-prev-link">Home </a> |
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/network-app.html" class="next-prev-link"> Next Project ⇢</a> 
+						<a href="/elearn-app.html" class="next-prev-link"> ⇠ Previous Project </a>┊
+						<a href="/network-app.html" class="next-prev-link"> Next Project ⇢</a> 
                     </div>
 
 
