--- a/remit-app.html
+++ b/remit-app.html
@@ -29,7 +29,7 @@
 		<div class="left-text">
 			<div class="left-containter-top">
 				<div class="left-containter-top-center">
-			<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="home-link">⇠ Home</a>
+			<a href="/" class="home-link">⇠ Home</a>
 			
 			<div class="head-shot"></div>
 			<h1>Haaruun M. 
@@ -193,9 +193,8 @@
 
 
 					<div class="view-next-btn-wtapper">
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/network-app.html" class="next-prev-link"> ⇠ Previous Project </a>|
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/index.html" class="next-prev-link">Home </a> |
-						<a href="file:///Users/haaruundhubat/Downloads/OnlineResume-gh-pages/insurance-app.html" class="next-prev-link"> Next Project ⇢</a> 
+						<a href="/network-app.html" class="next-prev-link"> ⇠ Previous Project </a>┊
+						<a href="/insurance-app.html" class="next-prev-link"> Next Project ⇢</a> 
                     </div>
 
                  
