--- a/elearn-app.html
+++ b/elearn-app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
             
                 <span class="res-co-wrapper">
 					<a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>
-					<a href="assets/images/Resume.pdf" target="_blank" class="btn-outline">Resume</a>
+					<a href="assets/Resume.pdf" target="_blank" class="btn-outline">Resume</a>
 				</span>
            
                 <p class="icon-wrap">
