--- a/network-app.html
+++ b/network-app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +39,7 @@
 
                 <span class="res-co-wrapper">
 					<a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>
-					<a href="https://drive.google.com/file/d/1Hv59XcOTcfmEEv8p8HWQ6u8K7Ft8f5DL/view?usp=sharing" class="btn-outline">Resume</a>
+					<a href="assets/Resume.pdf" class="btn-outline">Resume</a>
 				</span>
           
 				<p class="icon-wrap">
